--- a/package.json
+++ b/package.json
@@ -7,18 +7,42 @@
   "license": "MIT",
   "scripts": {
     "test": "mocha server-test/index.js",
-    "start": "node index"
+    "start:dev": "export NODE_ENV=development && node index",
+    "dist": "rimraf web/dist && webpack -p --config web/webpack.prod.config.js --progress --profile --colors",
+    "prestart": "npm install",
+    "start": "export NODE_ENV=production  && npm run dist && node index"
   },
   "dependencies": {
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "express-brute": "^1.0.1",
     "express-session": "^1.15.2",
     "lowdb": "^0.16.0",
     "session-file-store": "^1.0.0"
   },
   "devDependencies": {
+    "axios": "^0.16.0",
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-latest": "^6.24.0",
+    "babel-preset-react": "^6.23.0",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
-    "mocha": "^3.2.0"
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.28.0",
+    "html-webpack-plugin": "^2.28.0",
+    "mocha": "^3.2.0",
+    "moment": "^2.18.1",
+    "react": "^15.4.2",
+    "react-css-modules": "^4.1.0",
+    "react-dom": "^15.4.2",
+    "react-router-dom": "^4.0.0",
+    "rimraf": "^2.6.1",
+    "style-loader": "^0.16.1",
+    "webpack": "^2.3.2",
+    "webpack-bundle-analyzer": "^2.3.1",
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-hot-middleware": "^2.17.1"
   }
 }
