--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-brute": "^1.0.1",
     "express-session": "^1.15.2",
     "lowdb": "^0.16.0",
+    "react-bootstrap-table": "^3.2.1",
     "session-file-store": "^1.0.0",
     "winston": "^2.3.1",
     "winston-daily-rotate-file": "^1.4.6"
