--- a/package.json
+++ b/package.json
@@ -7,47 +7,47 @@
   "license": "MIT",
   "scripts": {
     "test": "export NODE_ENV=test && mocha server-test/index.js",
-    "start:dev": "export NODE_ENV=development && node index",
-    "dist": "rimraf web/dist && webpack -p --config web/webpack.prod.config.js --progress --profile --colors",
+    "dev": "export NODE_ENV=development && node index",
+    "build:web": "export NODE_ENV=production && rimraf web/dist && webpack -p --config web/webpack.prod.config.js --progress --profile --colors",
     "prestart": "npm install",
-    "start": "export NODE_ENV=production && npm run dist && node index"
+    "start": "node index"
   },
   "dependencies": {
+    "axios": "^0.16.0",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-latest": "^6.24.0",
+    "babel-preset-react": "^6.23.0",
     "body-parser": "^1.17.1",
     "config": "^1.25.1",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.28.0",
     "express": "^4.15.2",
     "express-brute": "^1.0.1",
     "express-session": "^1.15.2",
     "fs-extra": "^2.1.2",
-    "lowdb": "^0.16.0",
-    "react-bootstrap-table": "^3.2.1",
-    "session-file-store": "^1.0.0",
-    "winston": "^2.3.1",
-    "winston-daily-rotate-file": "^1.4.6"
-  },
-  "devDependencies": {
-    "axios": "^0.16.0",
-    "babel-core": "^6.24.0",
-    "babel-loader": "^6.4.1",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-latest": "^6.24.0",
-    "babel-preset-react": "^6.23.0",
-    "chai": "^3.5.0",
-    "chai-http": "^3.0.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.0",
     "html-webpack-plugin": "^2.28.0",
-    "mocha": "^3.2.0",
+    "lowdb": "^0.16.0",
     "moment": "^2.18.1",
     "react": "^15.4.2",
+    "react-bootstrap-table": "^3.2.1",
     "react-css-modules": "^4.1.0",
     "react-dom": "^15.4.2",
     "react-router-dom": "^4.0.0",
     "rimraf": "^2.6.1",
+    "session-file-store": "^1.0.0",
     "style-loader": "^0.16.1",
-    "webpack": "^2.3.2",
+    "webpack": "^2.4.1",
     "webpack-bundle-analyzer": "^2.3.1",
-    "webpack-dev-middleware": "^1.10.1",
-    "webpack-hot-middleware": "^2.17.1"
+    "webpack-dev-middleware": "^1.10.2",
+    "webpack-hot-middleware": "^2.17.1",
+    "winston": "^2.3.1",
+    "winston-daily-rotate-file": "^1.4.6"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
+    "mocha": "^3.2.0"
   }
 }
