--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "css-loader": "^0.28.0",
     "express": "^4.15.2",
     "express-brute": "^1.0.1",
-    "express-session": "^1.15.2",
     "fs-extra": "^2.1.2",
     "html-webpack-plugin": "^2.28.0",
+    "jsonwebtoken": "^7.4.0",
     "lowdb": "^0.16.0",
     "moment": "^2.18.1",
     "react": "^15.4.2",
@@ -36,7 +36,6 @@
     "react-dom": "^15.4.2",
     "react-router-dom": "^4.0.0",
     "rimraf": "^2.6.1",
-    "session-file-store": "^1.0.0",
     "style-loader": "^0.16.1",
     "webpack": "^2.4.1",
     "webpack-bundle-analyzer": "^2.3.1",
